--- a/cuda/cudarap/CMakeLists.txt
+++ b/cuda/cudarap/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
-set(name CUDAWrap)
+set(name CUDARap)
 project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
