--- a/graphics/assimprap/tests/CMakeLists.txt
+++ b/graphics/assimprap/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name AssimpWrapTest)
+set(name AssimpRapTest)
 project(${name})
 
 file(GLOB TEST_CC_SRCS "*Test.cc")
@@ -7,7 +7,7 @@ file(GLOB TEST_CC_SRCS "*Test.cc")
 foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
-    target_link_libraries(${TGT} ${LIBRARIES} AssimpWrap)
+    target_link_libraries(${TGT} ${LIBRARIES} AssimpRap)
     install(TARGETS ${TGT} DESTINATION bin)
 endforeach()
 
