--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -139,5 +139,5 @@ install(TARGETS ${name} DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include/${name})
 install(DIRECTORY gl/ DESTINATION gl)
 
-add_subdirectory(tests)
+add_subdirectory(tests EXCLUDE_FROM_ALL)
 
