--- a/boost/bregex/CMakeLists.txt
+++ b/boost/bregex/CMakeLists.txt
@@ -39,6 +39,6 @@ SET(hdrs
 install(TARGETS ${name} LIBRARY DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include/${name})
 
-add_subdirectory(tests)
+add_subdirectory(tests EXCLUDE_FROM_ALL)
 
 
