--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -156,5 +156,5 @@ md5digest.hpp
 install(TARGETS ${name}  DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include/${name})
 
-add_subdirectory(tests)
+add_subdirectory(tests EXCLUDE_FROM_ALL)
 
