--- a/numerics/npy/tests/CMakeLists.txt
+++ b/numerics/npy/tests/CMakeLists.txt
@@ -7,6 +7,11 @@ file(GLOB TEST_CC_SRCS "*Test.cc")
 foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
+
+    # https://cmake.org/Wiki/CMakeEmulateMakeCheck
+    add_test(${TGT} ${TGT})
+    add_dependencies(check ${TGT})
+
     target_link_libraries(${TGT} 
                ${LIBRARIES} 
                NPY
