--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -99,5 +99,5 @@ target_link_libraries( ${name} ${LIBRARIES} )
 install(TARGETS ${name}  DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include/${name})
 
-add_subdirectory(tests)
+add_subdirectory(tests EXCLUDE_FROM_ALL)
 
