CTest and CPack immediately useful

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
-project(OPTICKS)
+project(Opticks)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
                       "$ENV{ENV_HOME}/cmake/Modules"
@@ -7,6 +7,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
           ) 
 
 set(SUPERBUILD ON)
+
+include(CTest)
+include(CPack)
 
 include(EnvBuildOptions)
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
@@ -21,16 +24,12 @@ add_subdirectory(graphics/assimprap)
 add_subdirectory(graphics/openmeshrap)  
 add_subdirectory(graphics/oglrap)       
 
-# TODO: cmake recommends not branching based on envvar, move use cache variable and branch in cmake call
-if(EXISTS $ENV{OPTIX_SDK_DIR}/CMake AND WITH_OPTIX)
-    message("OPTIX_SDK_DIR:$ENV{OPTIX_SDK_DIR}")
+if(WITH_OPTIX)
     add_subdirectory(cuda/cudarap)        
     add_subdirectory(numerics/thrustrap)
     add_subdirectory(graphics/optixrap)
     add_subdirectory(opticksop)
     add_subdirectory(opticksgl)
-else()
-    message("WITH_OPTIX:${WITH_OPTIX} OPTIX_SDK_DIR:$ENV{OPTIX_SDK_DIR} ")
 endif()
 
 add_subdirectory(graphics/ggeoview)
