CTest for internals, standardized pkg names BCfg BRegex, externals building, ImGui building hassles

--- a/boost/bpo/bcfg/CMakeLists.txt
+++ b/boost/bpo/bcfg/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name Cfg)
+set(name BCfg)
 project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
