--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -82,32 +82,32 @@ endif()
 find_package(Boost REQUIRED)
 find_package(GLM  REQUIRED)
 
-find_package(Cfg REQUIRED)
-find_package(Bregex REQUIRED)
+find_package(BCfg REQUIRED)
+find_package(BRegex REQUIRED)
 find_package(NPY   REQUIRED)
 find_package(OpticksCore REQUIRED)
 
 set(BASE_INCLUDES
    ${Boost_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
-   ${Cfg_INCLUDE_DIRS} 
-   ${Bregex_INCLUDE_DIRS}
+   ${BCfg_INCLUDE_DIRS} 
+   ${BRegex_INCLUDE_DIRS}
    ${NPY_INCLUDE_DIRS} 
    ${OpticksCore_INCLUDE_DIRS} 
 )
 set(BASE_LIBRARIES
    ${Boost_LIBRARIES}
    ${GLM_LIBRARIES}
-   ${Cfg_LIBRARIES}
-   ${Bregex_LIBRARIES}
+   ${BCfg_LIBRARIES}
+   ${BRegex_LIBRARIES}
    ${NPY_LIBRARIES}
    ${OpticksCore_LIBRARIES}
 )
 set(BASE_DEFINITIONS
    ${Boost_DEFINITIONS} 
    ${GLM_DEFINITIONS} 
-   ${Cfg_DEFINITIONS}
-   ${Bregex_DEFINITIONS}
+   ${BCfg_DEFINITIONS}
+   ${BRegex_DEFINITIONS}
    ${NPY_DEFINITIONS}
    ${OpticksCore_DEFINITIONS}
 )
