--- a/graphics/ggeoview/tests/CMakeLists.txt
+++ b/graphics/ggeoview/tests/CMakeLists.txt
@@ -7,6 +7,10 @@ file(GLOB TEST_CC_SRCS "*Test.cc")
 foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
+
+    add_test(${name}.${TGT} ${TGT})
+    add_dependencies(check ${TGT})
+
     target_link_libraries(${TGT} 
                ${LIBRARIES} GGeoViewLib
     )
