--- a/numerics/thrustrap/tests/CMakeLists.txt
+++ b/numerics/thrustrap/tests/CMakeLists.txt
@@ -8,6 +8,11 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
 
     add_executable(${TGT} ${TEST_CC_SRC})
+
+    add_test(${name}.${TGT} ${TGT})
+    add_dependencies(check ${TGT})
+
+
     target_link_libraries(${TGT} 
             ${LIBRARIES} 
             ThrustRap
@@ -23,6 +28,10 @@ foreach(TEST_CU_SRC ${TEST_CU_SRCS})
     get_filename_component(TGT ${TEST_CU_SRC} NAME_WE)
 
     cuda_add_executable(${TGT} ${TEST_CU_SRC})
+
+    add_test(${name}.${TGT} ${TGT})
+    add_dependencies(check ${TGT})
+
     target_link_libraries(${TGT} 
             ${LIBRARIES} 
             ThrustRap
