--- a/boost/bregex/tests/CMakeLists.txt
+++ b/boost/bregex/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name BregexTest)
+set(name BRegexTest)
 project(${name})
 
 file(GLOB TEST_CC_SRCS "*Test.cc")
@@ -7,7 +7,11 @@ file(GLOB TEST_CC_SRCS "*Test.cc")
 foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
-    target_link_libraries(${TGT} ${LIBRARIES} Bregex)
+
+    add_test(${name}.${TGT} ${TGT})
+    add_dependencies(check ${TGT})
+
+    target_link_libraries(${TGT} ${LIBRARIES} BRegex)
     install(TARGETS ${TGT} DESTINATION bin)
 endforeach()
 
