--- a/numerics/npy/tests/CMakeLists.txt
+++ b/numerics/npy/tests/CMakeLists.txt
@@ -8,8 +8,8 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
 
-    # https://cmake.org/Wiki/CMakeEmulateMakeCheck
-    add_test(${TGT} ${TGT})
+    # see cmakex-
+    add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
 
     target_link_libraries(${TGT} 
