--- a/boost/bregex/CMakeLists.txt
+++ b/boost/bregex/CMakeLists.txt
@@ -2,24 +2,20 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name BRegex)
 project(${name})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-                      "$ENV{ENV_HOME}/cmake/Modules"
-          ) 
-
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(Boost REQUIRED)
+find_package(OpticksBoost REQUIRED)
 
 set(LIBRARIES
-   ${Boost_LIBRARIES}
+   ${OpticksBoost_LIBRARIES}
 )
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
-   ${Boost_INCLUDE_DIRS} 
+   ${OpticksBoost_INCLUDE_DIRS} 
 )
 add_definitions(
-   ${Boost_DEFINITIONS} 
+   ${OpticksBoost_DEFINITIONS} 
 )
 
 add_library( ${name}  SHARED
@@ -27,7 +23,7 @@ add_library( ${name}  SHARED
 )
 
 target_link_libraries( ${name} 
-      ${Boost_LIBRARIES}
+      ${OpticksBoost_LIBRARIES}
 )
 
 
