--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -2,33 +2,29 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name NPY)
 project(${name})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-                      "$ENV{ENV_HOME}/cmake/Modules"
-          ) 
-
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(Boost  REQUIRED)
+find_package(OpticksBoost  REQUIRED)
 find_package(GLM    REQUIRED)
 find_package(BRegex REQUIRED)
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
 
-   ${Boost_INCLUDE_DIRS} 
+   ${OpticksBoost_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${BRegex_INCLUDE_DIRS} 
 )
 
 add_definitions( 
-   ${Boost_DEFINITIONS} 
+   ${OpticksBoost_DEFINITIONS} 
    ${GLM_DEFINITIONS} 
    ${BRegex_DEFINITIONS} 
 )
 
 set(LIBRARIES
-   ${Boost_LIBRARIES}
+   ${OpticksBoost_LIBRARIES}
    ${GLM_LIBRARIES}
    ${BRegex_LIBRARIES}
    ssl 
