--- a/boost/bpo/bcfg/CMakeLists.txt
+++ b/boost/bpo/bcfg/CMakeLists.txt
@@ -2,27 +2,23 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name BCfg)
 project(${name})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-                      "$ENV{ENV_HOME}/cmake/Modules"
-          ) 
-
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(Boost REQUIRED)
+find_package(OpticksBoost REQUIRED)
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
-   ${Boost_INCLUDE_DIRS} 
+   ${OpticksBoost_INCLUDE_DIRS} 
 )
 add_definitions(
-   ${Boost_DEFINITIONS} 
+   ${OpticksBoost_DEFINITIONS} 
 )
 
 add_library( ${name}  SHARED  Cfg.cc )
 
 target_link_libraries( ${name} 
-      ${Boost_LIBRARIES}
+      ${OpticksBoost_LIBRARIES}
 )
 
 
