--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -2,14 +2,10 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name OpticksCore)
 project(${name})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-                      "$ENV{ENV_HOME}/cmake/Modules"
-          ) 
-
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(Boost REQUIRED)
+find_package(OpticksBoost REQUIRED)
 find_package(GLM REQUIRED)
 
 find_package(BRegex REQUIRED)
@@ -18,7 +14,7 @@ find_package(NPY REQUIRED)
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
-   ${Boost_INCLUDE_DIRS} 
+   ${OpticksBoost_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS}  
 
    ${BRegex_INCLUDE_DIRS}  
@@ -27,7 +23,7 @@ include_directories(
 )
 
 add_definitions( 
-   ${Boost_DEFINITIONS} 
+   ${OpticksBoost_DEFINITIONS} 
    ${GLM_DEFINITIONS} 
    ${NPY_DEFINITIONS} 
    ${BCfg_DEFINITIONS} 
@@ -36,7 +32,7 @@ add_definitions(
 )
 
 set(LIBRARIES
-   ${Boost_LIBRARIES}
+   ${OpticksBoost_LIBRARIES}
    ${GLM_LIBRARIES}
 
    ${NPY_LIBRARIES}
