--- a/opticksgl/CMakeLists.txt
+++ b/opticksgl/CMakeLists.txt
@@ -5,7 +5,6 @@ project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
                       "$ENV{OPTIX_SDK_DIR}/CMake"
-                      "$ENV{ENV_HOME}/cmake/Modules"
           ) 
 
 include(EnvBuildOptions)
@@ -27,7 +26,7 @@ include(OptiXThrustMacros)      # for optixthrust_add_executable handling .cu pa
 include(EnvCompilationFlags)   
 
 
-find_package(Boost REQUIRED)
+find_package(OpticksBoost REQUIRED)
 find_package(GLM  REQUIRED)
 
 find_package(GLEW REQUIRED)
@@ -51,7 +50,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}/inc   # for cmake configure_file Config.hh 
 
-    ${Boost_INCLUDE_DIRS} 
+    ${OpticksBoost_INCLUDE_DIRS} 
 
     ${GLEW_INCLUDE_DIRS} 
     ${GLFW_INCLUDE_DIRS} 
@@ -75,7 +74,7 @@ include_directories(
 
 
 set(LIBRARIES
-      ${Boost_LIBRARIES}
+      ${OpticksBoost_LIBRARIES}
 
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
@@ -100,7 +99,7 @@ set(LIBRARIES
 )
 
 add_definitions(
-    ${Boost_DEFINITIONS}
+    ${OpticksBoost_DEFINITIONS}
 
     ${GLEW_DEFINITIONS}
     ${GLFW_DEFINITIONS}
